# PolymarketTradingBot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  control_panel.html  vertical_dashboard.html
docs/: execution_aware_prediction_plan.md  feature_catalog_step3.md  motorcade_plan.md  services.md
scripts/: analyze_weather_gefs.py  collect.sh  common.sh  evaluate_verticals.py  morning_review.sh  nohup.out  rebuild_models.sh  render_vertical_dashboard.py  run_24h_server_collection.sh  run_live_shadow.sh  run_research_capture.sh  run_research_paper_capture.sh  trade.sh  train_forecast_gbt.py
sidecars/crypto/: predictor.py  price_fetcher.py  sidecar.py
sidecars/weather/: ensemble_predictor.py  nohup.out  sidecar.py  start.sh
src/: main.rs
src/data/: market_enrichment.rs  market_scanner.rs  mod.rs  ws_delta.rs
src/datasets/: builder.rs
src/execution/: client.rs  engine.rs  mod.rs  paper_sim.rs  types.rs
src/features/: execution.rs  forecast.rs  mod.rs
src/markets/: kalshi_mapper.rs  mod.rs
src/model/: allocator.rs  mod.rs  valuation.rs
src/models/: execution.rs  forecast.rs  mod.rs  report.rs
src/outcomes/: resolver.rs
src/policy/: decision.rs  mod.rs  report.rs
src/replay/: mod.rs
src/research/: events.rs  market_recorder.rs  mod.rs  order_recorder.rs  report.rs
var/cycles/: 20260211T230748_948.json  20260211T230947_348.json  20260211T232842_537.json  20260211T233129_793.json  20260211T233423_442.json  20260211T233903_946.json  20260211T233944_200.json  20260211T234038_620.json  20260211T234145_58.json  20260212T000620_824.json  (+1019 more)
(+13 files in other folders)
